--- a/projeto download/Chef Express/servidor/.env
+++ b/projeto download/Chef Express/servidor/.env
@@ -1,5 +1,5 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=
-DB_NAME=meu_site
-JWT_SECRET=segredo_super_forte
+DB_PASS=1234
+DB_NAME=cadastro
+JWT_SECRET=
